System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12
Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-07 21:33, hash: rBc6cda3c09cd0
worked: 2.82a
Short description of error
Viewport whitens when replaced with a lower level of Anti-aliasing
The effect accumulates when lower levels are set step by step
Exact steps for others to reproduce the error
Based on the default startup
1)Open Blender Preferences -> Viewport tab
2)Set lower level than current(or set maximum level and set to wover lever)
3)(Optionaly: Repeat 2 step)
4)See high brightness artifact